--- a/main_window/add_form/add_form.ui
+++ b/main_window/add_form/add_form.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
+  </property>
   <widget class="QTableWidget" name="table">
    <property name="geometry">
     <rect>
@@ -21,6 +24,12 @@
      <width>421</width>
      <height>251</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">gridline-color: rgb(173, 173, 173);
+font: 10pt &quot;Book Antiqua&quot;;
+background-color: rgb(239, 239, 239);
+color: rgb(0, 85, 255);</string>
    </property>
   </widget>
   <widget class="QTextEdit" name="text_search">
@@ -32,41 +41,62 @@
      <height>31</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+   </property>
+   <property name="html">
+    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Book Antiqua'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
   </widget>
   <widget class="QLabel" name="label_entername">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>11</x>
      <y>10</y>
-     <width>251</width>
+     <width>301</width>
      <height>31</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;Book Antiqua&quot;;</string>
+   </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;Введите название продукта:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#a33600;&quot;&gt;Введите название продукта:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QTextEdit" name="textEdit_weight">
    <property name="geometry">
     <rect>
-     <x>613</x>
+     <x>630</x>
      <y>50</y>
      <width>61</width>
      <height>31</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+   </property>
   </widget>
   <widget class="QLabel" name="label_qualityw">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>55</y>
-     <width>161</width>
-     <height>21</height>
+     <x>440</x>
+     <y>50</y>
+     <width>201</width>
+     <height>31</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgba(255, 255, 255, 0);
+font: 12pt &quot;Book Antiqua&quot;;
+</string>
+   </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Количесвто в граммах:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#ac3900;&quot;&gt;Количество в граммах:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_info">
@@ -74,18 +104,22 @@
     <rect>
      <x>450</x>
      <y>100</y>
-     <width>191</width>
-     <height>91</height>
+     <width>241</width>
+     <height>71</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgba(255, 255, 255, 0);
+font: 11pt &quot;Book Antiqua&quot;;</string>
+   </property>
    <property name="text">
-    <string> </string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QPushButton" name="button_add">
    <property name="geometry">
     <rect>
-     <x>500</x>
+     <x>450</x>
      <y>290</y>
      <width>75</width>
      <height>23</height>
@@ -94,6 +128,10 @@
    <property name="focusPolicy">
     <enum>Qt::TabFocus</enum>
    </property>
+   <property name="styleSheet">
+    <string notr="true">font: 9pt &quot;Book Antiqua&quot;;
+background-color: rgb(218, 218, 218);</string>
+   </property>
    <property name="text">
     <string>Добавить</string>
    </property>
@@ -101,14 +139,35 @@
   <widget class="QPushButton" name="button_cancel">
    <property name="geometry">
     <rect>
-     <x>580</x>
+     <x>530</x>
      <y>290</y>
      <width>75</width>
      <height>23</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">font: 9pt &quot;Book Antiqua&quot;;
+background-color: rgb(218, 218, 218);</string>
+   </property>
    <property name="text">
     <string>Отменить</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>610</x>
+     <y>290</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 9pt &quot;Book Antiqua&quot;;
+background-color: rgb(218, 218, 218);</string>
+   </property>
+   <property name="text">
+    <string>Ок</string>
    </property>
   </widget>
  </widget>
