--- a/reg_window/reg_form.ui
+++ b/reg_window/reg_form.ui
@@ -6,32 +6,42 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>258</width>
-    <height>527</height>
+    <width>280</width>
+    <height>602</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
+  </property>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>60</y>
-     <width>231</width>
-     <height>41</height>
+     <y>120</y>
+     <width>251</width>
+     <height>49</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QLabel" name="label_keyword">
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+      </property>
       <property name="text">
-       <string>Введите пароль:</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#0055ff;&quot;&gt;Введите пароль:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="lineEdit_keywod"/>
+     <widget class="QLineEdit" name="lineEdit_keywod">
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -39,21 +49,28 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>110</y>
-     <width>231</width>
-     <height>41</height>
+     <y>170</y>
+     <width>251</width>
+     <height>49</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_3">
     <item>
      <widget class="QLabel" name="label_age">
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+      </property>
       <property name="text">
-       <string>Введиет ваш возраст:</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#0055ff;&quot;&gt;Введиет ваш возраст:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="lineEdit_age"/>
+     <widget class="QLineEdit" name="lineEdit_age">
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -61,10 +78,14 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>360</y>
+     <y>420</y>
      <width>75</width>
      <height>23</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(218, 218, 218);
+font: 9pt &quot;Book Antiqua&quot;;</string>
    </property>
    <property name="text">
     <string>Рассчитать</string>
@@ -74,53 +95,67 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>310</y>
-     <width>231</width>
-     <height>41</height>
+     <y>370</y>
+     <width>251</width>
+     <height>46</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_9">
     <item>
      <widget class="QLabel" name="label_activity_2">
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+      </property>
       <property name="text">
-       <string>Выберете вашу цель</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#0055ff;&quot;&gt;Выберете вашу цель&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QComboBox" name="comboBox_activity_2"/>
+     <widget class="QComboBox" name="comboBox_activity_2">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(218, 218, 218);font: 9pt &quot;Book Antiqua&quot;;</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
-     <width>231</width>
-     <height>41</height>
+     <y>70</y>
+     <width>251</width>
+     <height>49</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QLabel" name="label_login">
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+      </property>
       <property name="text">
-       <string>Введите логин:</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#0055ff;&quot;&gt;Введите логин:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="lineEdit_login"/>
+     <widget class="QLineEdit" name="lineEdit_login">
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>160</y>
-     <width>231</width>
-     <height>43</height>
+     <y>220</y>
+     <width>251</width>
+     <height>51</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -128,13 +163,20 @@
      <layout class="QVBoxLayout" name="verticalLayout_4">
       <item>
        <widget class="QLabel" name="label_weight">
+        <property name="styleSheet">
+         <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+        </property>
         <property name="text">
-         <string>Введите ваш вес:</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#0055ff;&quot;&gt;Введите ваш вес:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="lineEdit_weight"/>
+       <widget class="QLineEdit" name="lineEdit_weight">
+        <property name="styleSheet">
+         <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -142,32 +184,42 @@
      <layout class="QVBoxLayout" name="verticalLayout_5">
       <item>
        <widget class="QLabel" name="label_hight">
+        <property name="styleSheet">
+         <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+        </property>
         <property name="text">
-         <string>Введите ваш рост:</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#0055ff;&quot;&gt;Введите ваш рост:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="lineEdit_hight"/>
+       <widget class="QLineEdit" name="lineEdit_hight">
+        <property name="styleSheet">
+         <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>210</y>
-     <width>74</width>
-     <height>40</height>
+     <y>273</y>
+     <width>91</width>
+     <height>46</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_6">
     <item>
      <widget class="QLabel" name="label_sex">
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+      </property>
       <property name="text">
-       <string>Выберете пол</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#0055ff;&quot;&gt;Выберете пол&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
@@ -175,6 +227,13 @@
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QRadioButton" name="radioButton_f">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#0055ff;&quot;&gt;Ж&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 8pt &quot;Book Antiqua&quot;;
+</string>
+        </property>
         <property name="text">
          <string>Ж</string>
         </property>
@@ -182,6 +241,9 @@
       </item>
       <item>
        <widget class="QRadioButton" name="radioButton_m">
+        <property name="styleSheet">
+         <string notr="true">font: 8pt &quot;Book Antiqua&quot;;</string>
+        </property>
         <property name="text">
          <string>М</string>
         </property>
@@ -191,62 +253,81 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>260</y>
-     <width>231</width>
-     <height>41</height>
+     <y>320</y>
+     <width>251</width>
+     <height>46</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_7">
     <item>
      <widget class="QLabel" name="label_activity">
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+      </property>
       <property name="text">
-       <string>Укажите вашу активность</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#0055ff;&quot;&gt;Укажите вашу активность&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QComboBox" name="comboBox_activity"/>
+     <widget class="QComboBox" name="comboBox_activity">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(218, 218, 218);
+font: 9pt &quot;Book Antiqua&quot;;</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>390</y>
-     <width>231</width>
-     <height>41</height>
+     <y>450</y>
+     <width>251</width>
+     <height>49</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_8">
     <item>
      <widget class="QLabel" name="label_8">
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+      </property>
       <property name="text">
-       <string>Ваша дневная норма калорий:</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#0055ff;&quot;&gt;Ваша дневная норма калорий:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="lineEdit_6"/>
+     <widget class="QLineEdit" name="lineEdit_6">
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>450</y>
+     <y>510</y>
      <width>158</width>
-     <height>25</height>
+     <height>26</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_3">
     <item>
      <widget class="QPushButton" name="pushButton_ok">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(218, 218, 218);
+font: 9pt &quot;Book Antiqua&quot;;</string>
+      </property>
       <property name="text">
        <string>Ок</string>
       </property>
@@ -254,12 +335,48 @@
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_cancel">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(218, 218, 218);
+font: 9pt &quot;Book Antiqua&quot;;</string>
+      </property>
       <property name="text">
        <string>Отмена</string>
       </property>
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QLabel" name="waring">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>550</y>
+     <width>231</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#2b2b2b;&quot;&gt;TextLabel&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="waring_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>20</y>
+     <width>231</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 10pt &quot;Book Antiqua&quot;;</string>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt; font-weight:600; color:#933100;&quot;&gt;Регистрация&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
   </widget>
  </widget>
  <resources/>
